# x-django-sandbox

./: db.sqlite3  pyproject.toml
accounts/: .gitignore  README.md  admin.py  models.py
accounts/migrations/: 0001_initial.py
config/: settings.py  urls.py
