[project]
name = "x-django-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.3",
]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]
[tool.ruff.format]
quote-style = "single"
indent-style = "space"
[tool.ruff.lint]
select = ["I"]
ignore = []
